@@ -95,6 +95,7 @@ import es.pfsgroup.plugin.rem.activo.dao.ActivoCargasDao;
 import es.pfsgroup.plugin.rem.activo.dao.ActivoDao;
 import es.pfsgroup.plugin.rem.activo.dao.ActivoHistoricoPatrimonioDao;
 import es.pfsgroup.plugin.rem.activo.dao.ActivoPatrimonioDao;
+import es.pfsgroup.plugin.rem.activo.exception.HistoricoTramitacionException;
 import es.pfsgroup.plugin.rem.activo.publicacion.dao.ActivoPublicacionDao;
 import es.pfsgroup.plugin.rem.adapter.ActivoAdapter;
 import es.pfsgroup.plugin.rem.adapter.AgrupacionAdapter;
@@ -220,6 +221,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	private static final String RELACION_TIPO_DOCUMENTO_EXPEDIENTE = "d-e";	
 	private static final String OPERACION_ALTA = "Alta";
 	public static final String ERROR_ANYADIR_PRESTACIONES_EN_REGISTRO = "Ya existe un registro 'Presentación en registro', y está activo";
+	public static final String ERROR_ANYADIR_EN_REGISTRO = "Ya existe un registro '%s', y está activo";
 	
 	private SimpleDateFormat ft = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 	private BeanUtilNotNull beanUtilNotNull = new BeanUtilNotNull();
@@ -404,7 +406,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 	@Override
 	@BusinessOperation(overrides = "activoManager.getListActivos")
-	public Page getListActivos(DtoActivoFilter dto, Usuario usuarioLogado) {
+	public Object getListActivos(DtoActivoFilter dto, Usuario usuarioLogado) {
 		return activoDao.getListActivos(dto, usuarioLogado);
 	}
 
@@ -497,7 +499,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	 * @param actPubli
 	 */
 	@Transactional(readOnly = false)
-	private void updateActivoPublicacion(DtoPrecioVigente dto, ActivoPublicacion actPubli) {
+	public void updateActivoPublicacion(DtoPrecioVigente dto, ActivoPublicacion actPubli) {
 
 		if (!Checks.esNulo(actPubli)) {
 
@@ -667,7 +669,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	@Transactional(readOnly = false)
 	@BusinessOperation(overrides = "activoManager.saveOfertaActivo")
-	public boolean saveOfertaActivo(DtoOfertaActivo dto) throws JsonViewerException, Exception {
+	public boolean saveOfertaActivo(DtoOfertaActivo dto) throws Exception {
 		boolean resultado = true;
 		
 		Filter filtro = genericDao.createFilter(FilterType.EQUALS, "id", dto.getIdOferta());
@@ -792,7 +794,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 		try {
 			transaction = transactionManager.getTransaction(new DefaultTransactionDefinition());
-			expedienteComercial = crearExpedienteGuardado(oferta, trabajo, ofertaOriginalGencatEjerce);
+			expedienteComercial = crearExpedienteGuardado(oferta, trabajo);
 
 			if(DDTipoOferta.CODIGO_ALQUILER.equals(oferta.getTipoOferta().getCodigo()) && MAESTRO_ORIGEN_WCOM.equals(oferta.getOrigen())){
 				Usuario usu=proxyFactory.proxy(UsuarioApi.class).getUsuarioLogado();
@@ -814,7 +816,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		// cuando creamos el expediente, si procede, creamos el repositorio
 		// en el gestor documental
 		if (resultado) {
-			if (!Checks.esNulo(appProperties
+			if (resultado && !Checks.esNulo(appProperties
 					.getProperty(GestorDocumentalExpedientesManager.URL_REST_CLIENT_GESTOR_DOCUMENTAL_EXPEDIENTES))) {
 				Thread hiloReactivar = new Thread(new ContenedorExpComercial(
 						genericAdapter.getUsuarioLogado().getUsername(), expedienteComercial.getId()));
@@ -865,7 +867,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		return expedienteComercial;
 	}
 
-	private ExpedienteComercial crearExpedienteGuardado(Oferta oferta, Trabajo trabajo, Oferta ofertaOriginalGencatEjerce) throws Exception {
+	private ExpedienteComercial crearExpedienteGuardado(Oferta oferta, Trabajo trabajo){
 
 		ExpedienteComercial nuevoExpediente = new ExpedienteComercial();
 
@@ -913,8 +915,8 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				DDTipoCalculo tipoCalculo = (DDTipoCalculo) utilDiccionarioApi
 						.dameValorDiccionarioByCod(DDTipoCalculo.class, DDTipoCalculo.TIPO_CALCULO_PORCENTAJE);
 				nuevoCondicionante.setTipoCalculoReserva(tipoCalculo);
-				nuevoCondicionante.setPorcentajeReserva(new Double(3));
-				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (new Double(3) / 100));
+				nuevoCondicionante.setPorcentajeReserva(Double.valueOf(3));
+				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (Double.valueOf(3) / 100));
 				nuevoCondicionante.setPlazoFirmaReserva(5);
 			}
 			// HREOS-4450
@@ -926,8 +928,8 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				DDTipoCalculo tipoCalculo = (DDTipoCalculo) utilDiccionarioApi
 						.dameValorDiccionarioByCod(DDTipoCalculo.class, DDTipoCalculo.TIPO_CALCULO_PORCENTAJE);
 				nuevoCondicionante.setTipoCalculoReserva(tipoCalculo);
-				nuevoCondicionante.setPorcentajeReserva(new Double(5));
-				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (new Double(5) / 100));
+				nuevoCondicionante.setPorcentajeReserva(Double.valueOf(5));
+				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (Double.valueOf(5) / 100));
 			}
 
 			if (!Checks.esNulo(oferta.getActivoPrincipal()) && !Checks.esNulo(oferta.getActivoPrincipal().getCartera())
@@ -936,8 +938,8 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				DDTipoCalculo tipoCalculo = (DDTipoCalculo) utilDiccionarioApi
 						.dameValorDiccionarioByCod(DDTipoCalculo.class, DDTipoCalculo.TIPO_CALCULO_PORCENTAJE);
 				nuevoCondicionante.setTipoCalculoReserva(tipoCalculo);
-				nuevoCondicionante.setPorcentajeReserva(new Double(3));
-				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (new Double(3) / 100));
+				nuevoCondicionante.setPorcentajeReserva(Double.valueOf(3));
+				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (Double.valueOf(3) / 100));
 				nuevoCondicionante.setPlazoFirmaReserva(5);
 			}
 
@@ -954,7 +956,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 						.dameValorDiccionarioByCod(DDTipoCalculo.class, DDTipoCalculo.TIPO_CALCULO_PORCENTAJE);
 				nuevoCondicionante.setTipoCalculoReserva(tipoCalculo);
 				nuevoCondicionante.setPorcentajeReserva(new Double(10));
-				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (new Double(10) / 100));
+				nuevoCondicionante.setImporteReserva(oferta.getImporteOferta() * (Double.valueOf(10) / 100));
 			}
 
 			if(DDCartera.CODIGO_CARTERA_CERBERUS.equals(oferta.getActivoPrincipal().getCartera().getCodigo()) 
@@ -965,9 +967,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 							.dameValorDiccionarioByCod(DDTipoCalculo.class, DDTipoCalculo.TIPO_CALCULO_IMPORTE_FIJO);
 					nuevoCondicionante.setTipoCalculoReserva(tipoCalculo);
 					if (oferta.getImporteOferta() <= 50000) {
-						nuevoCondicionante.setImporteReserva((new Double(1000)));
+						nuevoCondicionante.setImporteReserva((Double.valueOf(1000)));
 					} else {
-						nuevoCondicionante.setImporteReserva((new Double(3000)));
+						nuevoCondicionante.setImporteReserva((Double.valueOf(3000)));
 					}
 				} else {
 					nuevoCondicionante.setSolicitaReserva(0);
@@ -1174,6 +1176,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		nuevoExpediente = genericDao.save(ExpedienteComercial.class, nuevoExpediente);
 
 		crearGastosExpediente(oferta, nuevoExpediente);
+
 		// Se asigna un gestor de Formalización al crear un nuevo expediente.
 		asignarGestorYSupervisorFormalizacionToExpediente(nuevoExpediente);
 
@@ -1607,7 +1610,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		return true;
 	}
 	@Transactional(readOnly = false)
-	private boolean saveActValFechaUltCambioPrecio(ActivoValoraciones actVal) {
+	public boolean saveActValFechaUltCambioPrecio(ActivoValoraciones actVal) {
 		Filter filtro = genericDao.createFilter(FilterType.EQUALS, "activo.id", actVal.getActivo().getId());
 		ActivoPublicacion activoPublicacion = genericDao.get(ActivoPublicacion.class, filtro);
 		
@@ -2128,10 +2131,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	public VCondicionantesDisponibilidad getCondicionantesDisponibilidad(Long idActivo) {
 		Filter idActivoFilter = genericDao.createFilter(FilterType.EQUALS, "idActivo", idActivo);
-		VCondicionantesDisponibilidad condicionantesDisponibilidad = genericDao
-				.get(VCondicionantesDisponibilidad.class, idActivoFilter);
-
-		return condicionantesDisponibilidad;
+		return genericDao.get(VCondicionantesDisponibilidad.class, idActivoFilter);
 	}
 
 	@Override
@@ -2799,9 +2799,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	public List<ActivoCalificacionNegativa> getActivoCalificacionNegativaByIdActivo(Long idActivo){
 		// Obtiene el registro de ActivoCalificacionNegativa para el activo dado
-		List<ActivoCalificacionNegativa> activoCNList = activoDao.getListActivoCalificacionNegativaByIdActivo(idActivo);
-		
-		return activoCNList;
+		return activoDao.getListActivoCalificacionNegativaByIdActivo(idActivo);
 	}
 
 	@Override
@@ -3047,10 +3045,10 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 							activoOferta.getPrimaryKey().getOferta().getId());
 					ExpedienteComercial expediente = genericDao.get(ExpedienteComercial.class, filtro);
 
-					if (!Checks.esNulo(expediente)) {
-						if (!Checks.esNulo(expediente.getFechaVenta()) && DDTipoOferta.CODIGO_VENTA.equals(activoOferta.getPrimaryKey().getOferta().getTipoOferta().getCodigo()))
+					if (!Checks.esNulo(expediente) && !Checks.esNulo(expediente.getFechaVenta()) && DDTipoOferta.CODIGO_VENTA.equals(activoOferta.getPrimaryKey().getOferta().getTipoOferta().getCodigo())) {
 							return true;
 					}
+					
 				}
 			}
 		}
@@ -3140,9 +3138,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			fechaBaja = !Checks.esNulo(fechaBaja) ? new Date(fechaBaja.getTime()) : null;
 
 			if (!Checks.esNulo(agrupacionActivo.getAgrupacion().getTipoAgrupacion())
-					&& agrupacionActivo.getAgrupacion().getTipoAgrupacion().getCodigo()
-							.equals(DDTipoAgrupacion.AGRUPACION_LOTE_COMERCIAL)
-					&& (Checks.esNulo(fechaBaja) || fechaBaja.after(new Date()))) {
+					&& (DDTipoAgrupacion.AGRUPACION_LOTE_COMERCIAL_VENTA.equals(agrupacionActivo.getAgrupacion().getTipoAgrupacion().getCodigo())
+							|| DDTipoAgrupacion.AGRUPACION_LOTE_COMERCIAL_ALQUILER.equals(agrupacionActivo.getAgrupacion().getTipoAgrupacion().getCodigo()))
+					&& (fechaBaja == null || fechaBaja.after(new Date()))) {
 				return true;
 			}
 		}
@@ -3221,15 +3219,14 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					long diffInMillies = 0;
 					int diff = 0;
 
-					if (!Checks.esNulo(adjuntoAux)) {
+					// Si no existe ningun adjunto de tipo ocupacionDesocupacion o si lo hay y tiene una fecha superior a los 30 dias se ha de mostrar el disclaimer
+					if (Checks.esNulo(adjuntoAux) || adjuntoAux.getFechaDocumento()==null) {
+						tieneAdjunto = true;
+					} else {
 						diffInMillies = Math.abs(System.currentTimeMillis() - adjuntoAux.getFechaDocumento().getTime());
 					    diff = (int)TimeUnit.DAYS.convert(diffInMillies, TimeUnit.MILLISECONDS);
+						tieneAdjunto = diff >= 30;
 					}
-
-					// Si no existe ningun adjunto de tipo ocupacionDesocupacion o si lo hay y tiene una fecha superior a los 30 dias se ha de mostrar el disclaimer
-					if (Checks.esNulo(adjuntoAux)) {
-						tieneAdjunto = true;
-					} else tieneAdjunto = diff >= 30;
 
 				}
 				else
@@ -3686,18 +3683,18 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 							filtroAuditoria);
 
 				}
-				
-				if(!Checks.esNulo(adjuntoTributo)) {
+
+				if (!Checks.esNulo(adjuntoTributo)) {
 					dtoTributo.setExisteDocumentoTributo("true");
 					dtoTributo.setDocumentoTributoNombre(adjuntoTributo.getNombre());
 					dtoTributo.setDocumentoTributoId(adjuntoTributo.getId());
-					 
-				}else if(Checks.esNulo(dtoTributo.getExisteDocumentoTributo())){
+
+				} else if (Checks.esNulo(dtoTributo.getExisteDocumentoTributo())) {
 					dtoTributo.setExisteDocumentoTributo("false");
 					dtoTributo.setDocumentoTributoNombre(null);
 					dtoTributo.setDocumentoTributoId(null);
 				}
-				
+
 				tributos.add(dtoTributo);
 			}
 		}
@@ -4493,12 +4490,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				}
 			}
 			
-//			if(!Checks.esNulo(dto.getMotivoAutorizacionTramitacionCodigo())) {
-//				if(DDMotivoAutorizacionTramitacion.COD_OTROS.equals(activo.getOfertas().get(0))) {
-//					
-//				}
-//			}
-
 		} catch (IllegalAccessException e) {
 			logger.error("Error en activoManager", e);
 			return false;
@@ -4560,8 +4551,10 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	public String getSubtipoTrabajoByOferta(Oferta oferta) {
 		if (oferta.getTipoOferta().getCodigo().equals(DDTipoOferta.CODIGO_VENTA)) {
 			return DDSubtipoTrabajo.CODIGO_SANCION_OFERTA_VENTA;
-		} else
+		} else {
 			return DDSubtipoTrabajo.CODIGO_SANCION_OFERTA_ALQUILER;
+		}
+			
 	}
 
 	@Transactional(readOnly = false)
@@ -5030,7 +5023,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			 * Antes se diferenciaba entre agrupacion lote comercial y lote
 			 * restringido Comercial: Asignaba los gestores que hubiese en la
 			 * ficha del activo Restringida: Llama al procedimiento de balanceo
-			 * (como si fuera un activo individual Ahora se quieren todos
+			 * (como si fuera un activo individual Ahora se quieren tod..os
 			 * iguales, la unica diferencia es que el lote comercial no tiene
 			 * activo principal y el resto si (restringida y activo unico)
 			 */
@@ -5131,16 +5124,16 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		if (!Checks.esNulo(perimetro) && !Checks.esNulo(perimetro.getAplicaFormalizar())
 				&& BooleanUtils.toBoolean(perimetro.getAplicaFormalizar())) {
 			if (!Checks.esNulo(usuarioGestorFormalizacion)) {
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTOR_FORMALIZACION,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTOR_FORMALIZACION,
 						usuarioGestorFormalizacion.getUsername(), dto);
 			} else {
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTOR_FORMALIZACION,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTOR_FORMALIZACION,
 						"GESTFORM", dto);
 			}
 
 			if (!activo.getCartera().getCodigo().equals(DDCartera.CODIGO_CARTERA_THIRD_PARTY)) {
 				if (!activo.getCartera().getCodigo().equals(DDCartera.CODIGO_CARTERA_CAJAMAR)) {
-					this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
+					this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
 							"SUPFORM", dto);
 				}
 
@@ -5161,40 +5154,40 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					usuarioSupervisorComercial = nuevoSupervisorC.getUsuario();// flag
 				}
 				if (!Checks.esNulo(supervisorFormalzacion)) {
-					this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
+					this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
 							supervisorFormalzacion.getUsuario().getUsername(), dto);
 				}
 				if (!Checks.esNulo(usuarioSupervisorComercial)) {
-					this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_COMERCIAL,
+					this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_COMERCIAL,
 							usuarioSupervisorComercial.getUsername(), dto);
 				}
 			}
 
 			if (!Checks.esNulo(usuarioGestoriaFormalizacion))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTORIA_FORMALIZACION,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTORIA_FORMALIZACION,
 						usuarioGestoriaFormalizacion.getUsername(), dto);
 		}
 
 		if (!Checks.esNulo(usuarioGestorComercial))
-			this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTOR_COMERCIAL,
+			this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTOR_COMERCIAL,
 					usuarioGestorComercial.getUsername(), dto);
 
 
 		if (activo.getCartera().getCodigo().equals(DDCartera.CODIGO_CARTERA_CAJAMAR)) {
 			if (!Checks.esNulo(usuarioGestorReserva))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTOR_RESERVA_CAJAMAR,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTOR_RESERVA_CAJAMAR,
 						usuarioGestorReserva.getUsername(), dto);
 			if (!Checks.esNulo(usuarioSupervisorReserva))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_RESERVA_CAJAMAR,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_RESERVA_CAJAMAR,
 						usuarioSupervisorReserva.getUsername(), dto);
 			if (!Checks.esNulo(usuarioGestorMinuta))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_GESTOR_MINUTA_CAJAMAR,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_GESTOR_MINUTA_CAJAMAR,
 						usuarioGestorMinuta.getUsername(), dto);
 			if (!Checks.esNulo(usuarioSupervisorMinuta))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_MINUTA_CAJAMAR,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_MINUTA_CAJAMAR,
 						usuarioSupervisorMinuta.getUsername(), dto);
 			if (!Checks.esNulo(usuarioSupervisorFormalizacion))
-				this.agregarTipoGestorYUsuarioEnDto(gestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
+				this.agregarTipoGestorYUsuarioEnDto(GestorExpedienteComercialApi.CODIGO_SUPERVISOR_FORMALIZACION,
 						usuarioSupervisorFormalizacion.getUsername(), dto);
 		}
 	}
@@ -5326,8 +5319,8 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 		if (this.isIntegradoAgrupacionObraNuevaOrAsistida(activo))
 			codigoTipoComercializacion = DDTipoComercializar.CODIGO_RETAIL;
-		else if (DDTipoUsoDestino.TIPO_USO_PRIMERA_RESIDENCIA.equals(activo.getTipoUsoDestino())
-				|| DDTipoUsoDestino.TIPO_USO_SEGUNDA_RESIDENCIA.equals(activo.getTipoUsoDestino()))
+		else if (activo.getTipoUsoDestino() != null && (DDTipoUsoDestino.TIPO_USO_PRIMERA_RESIDENCIA.equals(activo.getTipoUsoDestino().getCodigo())
+				|| DDTipoUsoDestino.TIPO_USO_SEGUNDA_RESIDENCIA.equals(activo.getTipoUsoDestino().getCodigo())))
 			codigoTipoComercializacion = DDTipoComercializar.CODIGO_RETAIL;
 		else {
 			Double importeLimite = (double) 500000;
@@ -5421,7 +5414,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 						if (activo.getAdjJudicial().getAdjudicacionBien().getLanzamientoNecesario()) {
 							activo.getSituacionPosesoria().setFechaTomaPosesion(
 									activo.getAdjJudicial().getAdjudicacionBien().getFechaRealizacionLanzamiento());
-							// activoDto.setFechaTomaPosesion(activo.getAdjJudicial().getAdjudicacionBien().getFechaRealizacionLanzamiento());
 						} else {
 							if (!Checks.esNulo(
 									activo.getAdjJudicial().getAdjudicacionBien().getFechaRealizacionPosesion())) {
@@ -5443,19 +5435,10 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					}
 				}
 
-			} else if (DDTipoTituloActivo.tipoTituloNoJudicial.equals(activo.getTipoTitulo().getCodigo())) {
-				if (!Checks.esNulo(activo.getAdjNoJudicial())) {
-					if (!Checks.esNulo(activo.getSituacionPosesoria())) {
-						if (Checks.esNulo(activo.getSituacionPosesoria().getEditadoFechaTomaPosesion())) {
-							activo.getSituacionPosesoria()
-									.setFechaTomaPosesion(activo.getAdjNoJudicial().getFechaTitulo());
+			} else if (DDTipoTituloActivo.tipoTituloNoJudicial.equals(activo.getTipoTitulo().getCodigo())
+					&& !Checks.esNulo(activo.getAdjNoJudicial()) && !Checks.esNulo(activo.getSituacionPosesoria())) {
+				activo.getSituacionPosesoria().setFechaTomaPosesion(activo.getAdjNoJudicial().getFechaTitulo());
 
-						} else if (!activo.getSituacionPosesoria().getEditadoFechaTomaPosesion()) {
-							activo.getSituacionPosesoria()
-									.setFechaTomaPosesion(activo.getAdjNoJudicial().getFechaTitulo());
-						}
-					}
-				}
 			}
 		}
 
@@ -5483,12 +5466,12 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 	@Override
 	public List<DtoActivoPatrimonio> getHistoricoAdecuacionesAlquilerByActivo(Long idActivo) {
-		List<ActivoHistoricoPatrimonio> ListActHistPatrimonio = activoHistoricoPatrimonioDao
+		List<ActivoHistoricoPatrimonio> listActHistPatrimonio = activoHistoricoPatrimonioDao
 				.getHistoricoAdecuacionesAlquilerByActivo(idActivo);
 		List<DtoActivoPatrimonio> listActPatrimonioDto = new ArrayList<DtoActivoPatrimonio>();
 
-		if (!Checks.esNulo(ListActHistPatrimonio)) {
-			for (ActivoHistoricoPatrimonio activoHistPatrimonio : ListActHistPatrimonio) {
+		if (!Checks.esNulo(listActHistPatrimonio)) {
+			for (ActivoHistoricoPatrimonio activoHistPatrimonio : listActHistPatrimonio) {
 				try {
 					DtoActivoPatrimonio actPatrimonioDto = new DtoActivoPatrimonio();
 					BeanUtils.copyProperties(actPatrimonioDto, activoHistPatrimonio);
@@ -5606,9 +5589,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			} else {
 				if (!Checks.esNulo(impuesto.getFechaFin())) {
 					Date fechaFinImpuesto = impuesto.getFechaFin();
-					String FechaFFormat = formateador.format(fechaFinImpuesto);
+					String fechaFormat = formateador.format(fechaFinImpuesto);
 
-					if (fechaAFormat.equals(FechaFFormat) || fechaActual.before(fechaFinImpuesto)){
+					if (fechaAFormat.equals(fechaFormat) || fechaActual.before(fechaFinImpuesto)){
 						Filter filtro = genericDao.createFilter(FilterType.EQUALS, "codigo", DDCalculoImpuesto.CODIGO_VENCIDO);
 						impuesto.setCalculoImpuesto(genericDao.get(DDCalculoImpuesto.class, filtro));
 
@@ -5708,7 +5691,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				
 				String codigoEstadoMotivoCalificacionNegativa = dto.getEstadoMotivoCalificacionNegativa();		
 				if (!Checks.esNulo(codigoEstadoMotivoCalificacionNegativa)) {
-					//beanUtilNotNull.copyProperty(activoCalificacionNegativa, "estadoMotivoCalificacioNegativa",genericDao.get(DDEstadoMotivoCalificacionNegativa.class, genericDao.createFilter(FilterType.EQUALS, "codigo", codigoEstadoMotivoCalificacionNegativa)));
 					activoCalificacionNegativa.setEstadoMotivoCalificacionNegativa(genericDao.get(DDEstadoMotivoCalificacionNegativa.class, genericDao.createFilter(FilterType.EQUALS, "codigo", codigoEstadoMotivoCalificacionNegativa)));
 				}
 				
@@ -5743,20 +5725,19 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	
 	@Override
 	@Transactional
-	public boolean createCalificacionNegativa(DtoActivoDatosRegistrales dto) throws JsonViewerException, Exception{
+	public boolean createCalificacionNegativa(DtoActivoDatosRegistrales dto) throws Exception{
 		try {
 			
 			if (!Checks.esNulo(dto)) {
 				
 				Activo activo = null;
 				ActivoCalificacionNegativa activoCalificacionNegativa = new ActivoCalificacionNegativa();
-//				dto.getNumeroActivo()
 				if (!Checks.esNulo(dto.getIdActivo())) {
 					activo = genericDao.get(Activo.class, genericDao.createFilter(FilterType.EQUALS, "id", dto.getIdActivo()));
-					if(!Checks.esNulo(activo.getTitulo()) && !Checks.esNulo(activo.getTitulo().getEstado())) {
-						if(DDEstadoTitulo.ESTADO_INSCRITO.equals(activo.getTitulo().getEstado().getCodigo())) {
-							return false;
-						}
+					if (!Checks.esNulo(activo.getTitulo()) && !Checks.esNulo(activo.getTitulo().getEstado())
+							&& DDEstadoTitulo.ESTADO_INSCRITO.equals(activo.getTitulo().getEstado().getCodigo())) {
+						return false;
+
 					}
 					activoCalificacionNegativa.setActivo(activo);
 				} else {
@@ -5767,7 +5748,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				if(!Checks.estaVacio(activoCalificacionNegativaList)){
 					for (ActivoCalificacionNegativa actCal : activoCalificacionNegativaList) { 
 						if(dto.getMotivoCalificacionNegativa().equalsIgnoreCase(actCal.getMotivoCalificacionNegativa().getCodigo())){
-							//return false;
 							//HREOS-6156 Al propagar, si tiene el mismo motivo, actualiza los datos de la calificación negativa.
 							activoCalificacionNegativa = actCal;
 						}
@@ -5984,9 +5964,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					activoDto.setActivosPropagables(activoPropagacionApi.getAllActivosAgrupacionPorActivo(activo));
 					return activoDto;
 				} catch (IllegalAccessException e) {
-					e.printStackTrace();
+					logger.error(e.getMessage(),e);
 				} catch (InvocationTargetException e) {
-					e.printStackTrace();
+					logger.error(e.getMessage(),e);
 				}
 			}
 		}
@@ -6116,9 +6096,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					activoDto.setActivosAgrupacionRestringida(getAllActivosAgrupacionRestringida(activo));
 					return activoDto;
 				} catch (IllegalAccessException e) {
-					e.printStackTrace();
+					logger.error(e.getMessage(),e);
 				} catch (InvocationTargetException e) {
-					e.printStackTrace();
+					logger.error(e.getMessage(),e);
 				}
 			}
 		}
@@ -6280,9 +6260,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 											fileItem = activoAdapter.download(adjuntoAux.getId(), adjuntoAux.getNombre());
 										}
 									} catch (UserException e) {
-										e.printStackTrace();
+										logger.error(e.getMessage(),e);
 									} catch (Exception e) {
-										e.printStackTrace();
+										logger.error(e.getMessage(),e);
 									}
 									if(!Checks.esNulo(fileItem)) {
 										adj.setAdjunto(new Adjunto(fileItem));
@@ -6315,18 +6295,17 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 								return true;
 								
 							} catch (IllegalAccessException e) {
-								// TODO Auto-generated catch block
-								e.printStackTrace();
+								logger.error(e.getMessage(),e);
 							} catch (InvocationTargetException e) {
-								// TODO Auto-generated catch block
-								e.printStackTrace();
+								logger.error(e.getMessage(),e);
 							} catch (GestorDocumentalException e) {
-								// TODO Auto-generated catch block
-								e.printStackTrace();
+								logger.error(e.getMessage(),e);
 							}
 							
-						} else
+						} else {
 							return false;
+						}
+							
 						// devolvemos un false por que no esta adjuntado el
 						// archivo
 						// y no se pueden guardar los cambios
@@ -6346,7 +6325,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		DDTipoDocumentoActivo tipoDocu=null;
 		Filter filtro = genericDao.createFilter(FilterType.EQUALS, "codigo", matriculaActivo);
 		tipoDocu = genericDao.get(DDTipoDocumentoActivo.class, filtro);
-		List<DtoAdjunto> listaAdjuntos = new ArrayList<DtoAdjunto>();
+		List<DtoAdjunto> listaAdjuntos = null;
 		if (gestorDocumentalAdapterApi.modoRestClientActivado()) {
 			Activo activo= this.get(idActivo);
 			try {
@@ -6354,10 +6333,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				if(!Checks.esNulo(listaAdjuntos)) {
 					for (DtoAdjunto adj : listaAdjuntos) {
 						String matricula =adj.getMatricula();
-						if(!Checks.esNulo(matricula)) {
-							if(matricula.equals(tipoDocu.getMatricula())) {
-								return true;
-							}
+						if (!Checks.esNulo(matricula) && matricula.equals(tipoDocu.getMatricula())) {
+							return true;
+
 						}
 					}
 				}
@@ -6376,7 +6354,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		if(!Checks.esNulo(dtoGenerarDocGDPR.getDocumento()))
 			documento = dtoGenerarDocGDPR.getDocumento();
 		
-		String reservationKey = appProperties.getProperty(KEY_GDPR)+documento+fecha;//TODO AQUI EL HASH MD5 MONTADO (key POR DEFINIR + #documento + today(yyyyMMdd)timestamp)
+		String reservationKey = appProperties.getProperty(KEY_GDPR)+documento+fecha;
 		String signature = computeKey(reservationKey);
 		
 		String url=appProperties.getProperty(URL_GDPR);
@@ -6393,34 +6371,35 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			gdpr3 = "1";
 		}
 		
-		final MultiPart multipart = new FormDataMultiPart()
-				.field("nombre", dtoGenerarDocGDPR.getNombre())
-				.field("documento", dtoGenerarDocGDPR.getDocumento())
-				.field("gdpr1", gdpr1)
-				.field("gdpr2", gdpr2)
+		byte[] bytes = null;
+		RespuestaDescargarDocumento respuesta2 = null;
+		MultiPart multipart = new FormDataMultiPart().field("nombre", dtoGenerarDocGDPR.getNombre())
+				.field("documento", dtoGenerarDocGDPR.getDocumento()).field("gdpr1", gdpr1).field("gdpr2", gdpr2)
 				.field("gdpr3", gdpr3)
 				.field("codRemPresciptor", String.valueOf(getCodRemPrescriptor(dtoGenerarDocGDPR)))
 				.field("signature", signature);
-		
-		
-		
-		ServerRequest serverRequest =  new ServerRequest();
-		serverRequest.setMethod(RestClientManager.METHOD_POST);
-		serverRequest.setRestClientUrl(url);
-		serverRequest.setMultipart(multipart);
-		serverRequest.setResponseClass(RespuestaDescargarDocumento.class);
-		Object respuesta = this.getBinaryResponse(serverRequest,"", dtoGenerarDocGDPR, signature);
-		byte[] bytes = null;
-		
-		if(respuesta instanceof byte[]) {
-			bytes = (byte[]) respuesta;
+		try {
+			ServerRequest serverRequest = new ServerRequest();
+			serverRequest.setMethod(RestClientManager.METHOD_POST);
+			serverRequest.setRestClientUrl(url);
+			serverRequest.setMultipart(multipart);
+			serverRequest.setResponseClass(RespuestaDescargarDocumento.class);
+			Object respuesta = this.getBinaryResponse(serverRequest, "", dtoGenerarDocGDPR, signature);
+			
+
+			if (respuesta instanceof byte[]) {
+				bytes = (byte[]) respuesta;
+			} else {
+				throw new GestorDocumentalException("Error al descargar documento");
+			}
+			respuesta2 = this.rellenarRespuestaDescarga(dtoGenerarDocGDPR.getDocumento());
+		} finally {
+			if(multipart != null) {
+				multipart.close();
+			}
+			
 		}
-		else {
-			throw new GestorDocumentalException("Error al descargar documento");
-		}
-		RespuestaDescargarDocumento respuesta2 = this.rellenarRespuestaDescarga(dtoGenerarDocGDPR.getDocumento()); 
-		FileItem fileItem = GestorDocToRecoveryAssembler.getFileItem(bytes,respuesta2);
-		return fileItem;
+		return GestorDocToRecoveryAssembler.getFileItem(bytes, respuesta2);
 	}
 	
 	private RespuestaDescargarDocumento rellenarRespuestaDescarga(String nombreDocumento){
@@ -6482,7 +6461,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			}
 			result  = hexString.toString();
 		} catch (Exception e) {
-			e.printStackTrace();
+			logger.error(e.getMessage(),e);
 		}
 		return result;
 	}
@@ -6498,16 +6477,11 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 		return codRemPrescriptor;
 	}
+
 	@Override
 	public ActivoPatrimonio getActivoPatrimonio(Long idActivo) {
-		ActivoPatrimonio activoPatrimonio = activoPatrimonioDao.getActivoPatrimonioByActivo(idActivo);
-
-
-				return activoPatrimonio;
-
-
+		return activoPatrimonioDao.getActivoPatrimonioByActivo(idActivo);
 	}
-
 
 	@Override
 	public List<DtoMotivoAnulacionExpediente> getMotivoAnulacionExpediente() {
@@ -6582,7 +6556,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 					fechaFormateada = formatter.parse(formatter.format(actCalNeg.getFechaSubsanacion()));
 				}
 			} catch (ParseException e) {
-				e.printStackTrace();
+				logger.error(e.getMessage(),e);
 			}
 			dto.setFechaSubsanacion(fechaFormateada);
 			dto.setEstadoMotivoCalificacionNegativa(actCalNeg.getEstadoMotivoCalificacionNegativa().getDescripcion());
@@ -6599,88 +6573,91 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	@Transactional(readOnly = false)
 	public boolean saveCalificacionNegativoMotivo(DtoActivoDatosRegistrales dto) {
-	
+
 		boolean resultado = false;
-		if (!Checks.esNulo(dto.getCalificacionNegativa())) {
-			
-			if (!Checks.esNulo(dto.getMotivoCalificacionNegativa())) {
-				Filter filtroActivo = genericDao.createFilter(FilterType.EQUALS, "activo.id",Long.parseLong(dto.getNumeroActivo()));
-				Filter filtroMotivo = genericDao.createFilter(FilterType.EQUALS, "motivoCalificacionNegativa.id",Long.parseLong(dto.getMotivoCalificacionNegativa()));
-				ActivoCalificacionNegativa actCalNeg = genericDao.get(ActivoCalificacionNegativa.class, filtroActivo,filtroMotivo);
-				DDEstadoMotivoCalificacionNegativa estMotCalNegativa = genericDao.get(DDEstadoMotivoCalificacionNegativa.class,genericDao.createFilter(FilterType.EQUALS, "codigo",  dto.getEstadoMotivoCalificacionNegativa()));
-				DDResponsableSubsanar responSubsanar = genericDao.get(DDResponsableSubsanar.class, genericDao.createFilter(FilterType.EQUALS, "codigo",  dto.getResponsableSubsanar()));
-				
-				if(!Checks.esNulo(actCalNeg)) {
-					if(!Checks.esNulo(estMotCalNegativa)) {
-						actCalNeg.setEstadoMotivoCalificacionNegativa(estMotCalNegativa);
-					}else {
-						actCalNeg.setEstadoMotivoCalificacionNegativa(null);
-					}
-					
-					if(!Checks.esNulo(responSubsanar)) {
-						actCalNeg.setResponsableSubsanar(responSubsanar);
-					}else {
-						actCalNeg.setResponsableSubsanar(null);
-					}
-					
-					if(!Checks.esNulo(dto.getFechaSubsanacion())) {
-						actCalNeg.setFechaSubsanacion(dto.getFechaSubsanacion());
-					}else {
-						actCalNeg.setFechaSubsanacion(null);
-					}
-					
-					if(DDMotivoCalificacionNegativa.CODIGO_OTROS.equals(actCalNeg.getMotivoCalificacionNegativa().getCodigo())) {
-						actCalNeg.setDescripcion(dto.getDescripcionCalificacionNegativa());
-					}
-					
-					if(actCalNeg.getAuditoria().isBorrado()) {
-						actCalNeg.getAuditoria().setFechaBorrar(null);
-						actCalNeg.getAuditoria().setUsuarioBorrar(null);
-						actCalNeg.getAuditoria().setBorrado(false);
-					}
-					
-					genericDao.save(ActivoCalificacionNegativa.class, actCalNeg);
-					
-					resultado = true;
-				}else {
-					actCalNeg = new ActivoCalificacionNegativa();
-					
-					if(!Checks.esNulo(estMotCalNegativa)) {
-						actCalNeg.setEstadoMotivoCalificacionNegativa(estMotCalNegativa);
-					}
-					
-					if(!Checks.esNulo(responSubsanar)) {
-						actCalNeg.setResponsableSubsanar(responSubsanar);
-					}
-					
-					if(!Checks.esNulo(dto.getFechaSubsanacion())) {
-						actCalNeg.setFechaSubsanacion(dto.getFechaSubsanacion());
-					}else {
-						actCalNeg.setFechaSubsanacion(null);
-					}
-					DDMotivoCalificacionNegativa motivoCN =(DDMotivoCalificacionNegativa) utilDiccionarioApi
-							.dameValorDiccionarioByCod(DDMotivoCalificacionNegativa.class, dto.getCodigoMotivoCalificacionNegativa());
-					
-					actCalNeg.setMotivoCalificacionNegativa(motivoCN);
-					actCalNeg.setActivo(activoDao.get(Long.parseLong(dto.getNumeroActivo())));
-					actCalNeg.setCalificacionNegativa((DDCalificacionNegativa) utilDiccionarioApi
-							.dameValorDiccionarioByCod(DDCalificacionNegativa.class, dto.getCalificacionNegativa()));
-					
-					if(DDMotivoCalificacionNegativa.CODIGO_OTROS.equals(motivoCN.getCodigo())) {
-						actCalNeg.setDescripcion(dto.getDescripcionCalificacionNegativa());
-					}
-					
-					
-					genericDao.save(ActivoCalificacionNegativa.class, actCalNeg);
-					
-					resultado = true;
+		if (!Checks.esNulo(dto.getCalificacionNegativa()) && !Checks.esNulo(dto.getMotivoCalificacionNegativa())) {
+
+			Filter filtroActivo = genericDao.createFilter(FilterType.EQUALS, "activo.id",
+					Long.parseLong(dto.getNumeroActivo()));
+			Filter filtroMotivo = genericDao.createFilter(FilterType.EQUALS, "motivoCalificacionNegativa.id",
+					Long.parseLong(dto.getMotivoCalificacionNegativa()));
+			ActivoCalificacionNegativa actCalNeg = genericDao.get(ActivoCalificacionNegativa.class, filtroActivo,
+					filtroMotivo);
+			DDEstadoMotivoCalificacionNegativa estMotCalNegativa = genericDao.get(
+					DDEstadoMotivoCalificacionNegativa.class,
+					genericDao.createFilter(FilterType.EQUALS, "codigo", dto.getEstadoMotivoCalificacionNegativa()));
+			DDResponsableSubsanar responSubsanar = genericDao.get(DDResponsableSubsanar.class,
+					genericDao.createFilter(FilterType.EQUALS, "codigo", dto.getResponsableSubsanar()));
+
+			if (!Checks.esNulo(actCalNeg)) {
+				if (!Checks.esNulo(estMotCalNegativa)) {
+					actCalNeg.setEstadoMotivoCalificacionNegativa(estMotCalNegativa);
+				} else {
+					actCalNeg.setEstadoMotivoCalificacionNegativa(null);
 				}
-				
+
+				if (!Checks.esNulo(responSubsanar)) {
+					actCalNeg.setResponsableSubsanar(responSubsanar);
+				} else {
+					actCalNeg.setResponsableSubsanar(null);
+				}
+
+				if (!Checks.esNulo(dto.getFechaSubsanacion())) {
+					actCalNeg.setFechaSubsanacion(dto.getFechaSubsanacion());
+				} else {
+					actCalNeg.setFechaSubsanacion(null);
+				}
+
+				if (DDMotivoCalificacionNegativa.CODIGO_OTROS
+						.equals(actCalNeg.getMotivoCalificacionNegativa().getCodigo())) {
+					actCalNeg.setDescripcion(dto.getDescripcionCalificacionNegativa());
+				}
+
+				if (actCalNeg.getAuditoria().isBorrado()) {
+					actCalNeg.getAuditoria().setFechaBorrar(null);
+					actCalNeg.getAuditoria().setUsuarioBorrar(null);
+					actCalNeg.getAuditoria().setBorrado(false);
+				}
+
+				genericDao.save(ActivoCalificacionNegativa.class, actCalNeg);
+
+				resultado = true;
+			} else {
+				actCalNeg = new ActivoCalificacionNegativa();
+
+				if (!Checks.esNulo(estMotCalNegativa)) {
+					actCalNeg.setEstadoMotivoCalificacionNegativa(estMotCalNegativa);
+				}
+
+				if (!Checks.esNulo(responSubsanar)) {
+					actCalNeg.setResponsableSubsanar(responSubsanar);
+				}
+
+				if (!Checks.esNulo(dto.getFechaSubsanacion())) {
+					actCalNeg.setFechaSubsanacion(dto.getFechaSubsanacion());
+				} else {
+					actCalNeg.setFechaSubsanacion(null);
+				}
+				DDMotivoCalificacionNegativa motivoCN = (DDMotivoCalificacionNegativa) utilDiccionarioApi
+						.dameValorDiccionarioByCod(DDMotivoCalificacionNegativa.class,
+								dto.getCodigoMotivoCalificacionNegativa());
+
+				actCalNeg.setMotivoCalificacionNegativa(motivoCN);
+				actCalNeg.setActivo(activoDao.get(Long.parseLong(dto.getNumeroActivo())));
+				actCalNeg.setCalificacionNegativa((DDCalificacionNegativa) utilDiccionarioApi
+						.dameValorDiccionarioByCod(DDCalificacionNegativa.class, dto.getCalificacionNegativa()));
+
+				if (DDMotivoCalificacionNegativa.CODIGO_OTROS.equals(motivoCN.getCodigo())) {
+					actCalNeg.setDescripcion(dto.getDescripcionCalificacionNegativa());
+				}
+
+				genericDao.save(ActivoCalificacionNegativa.class, actCalNeg);
+
+				resultado = true;
 			}
-			
-			
+
 		}
-		
+
 		return resultado;
 	}
 	
@@ -6694,9 +6671,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		for (ActivoCalificacionNegativa activoCN : motivosCalificacionNegativa){
 			if (!activoCN.getAuditoria().isBorrado()){
 				
-				if(DDEstadoMotivoCalificacionNegativa.DD_SUBSANADO_CODIGO.equals(activoCN.getEstadoMotivoCalificacionNegativa().getCodigo())){
-					subsanado=subsanado+1;
-				}else if(idMotivo.equals(activoCN.getMotivoCalificacionNegativa().getCodigo())) {
+				if(DDEstadoMotivoCalificacionNegativa.DD_SUBSANADO_CODIGO.equals(activoCN.getEstadoMotivoCalificacionNegativa().getCodigo()) || idMotivo.equals(activoCN.getMotivoCalificacionNegativa().getCodigo())){
 					subsanado=subsanado+1;
 				}
 			}
@@ -6732,7 +6707,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	@Transactional(readOnly = false)	
 	public void actualizarOfertasTrabajosVivos(Activo activo) {
-		// TODO Auto-generated method stub
 		Boolean tieneOfertasVivas = false;
 		Boolean tieneTrabajosVivos = false;
 		List<ActivoTrabajo> trabajosDelActivo = activo.getActivoTrabajos();
@@ -6872,9 +6846,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	}
 	
 	@Override
-	public void cambiarSituacionComercialActivoMatriz(Long UA) {
+	public void cambiarSituacionComercialActivoMatriz(Long uA) {
 		Activo activoMatriz = null;
-		ActivoAgrupacion agr = activoDao.getAgrupacionPAByIdActivo(UA);
+		ActivoAgrupacion agr = activoDao.getAgrupacionPAByIdActivo(uA);
 		if (!Checks.esNulo(agr)) {
 			activoMatriz = activoAgrupacionActivoDao.getActivoMatrizByIdAgrupacion(agr.getId());
 		}
@@ -6884,7 +6858,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	
 	@Override
 	public boolean isAlquiladoParcialmente(Long idActivoMatriz) {
-		boolean UAsAlquiladas = false;
+		boolean uAsAlquiladas = false;
 		ActivoAgrupacion agr = activoDao.getAgrupacionPAByIdActivo(idActivoMatriz);
 		
 		List<ActivoAgrupacionActivo> activos = agr.getActivos();
@@ -6892,12 +6866,12 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		if (!Checks.estaVacio(activos)) {
 			for (ActivoAgrupacionActivo activo : activos) {
 				if (!isActivoMatriz(activo.getActivo().getId()) && (isActivoAlquilado(activo.getActivo()) || isOcupadoConTituloOrEstadoAlquilado(activo.getActivo()))) {
-					UAsAlquiladas = true;
+					uAsAlquiladas = true;
 				}
 			}
 		}
 		
-		return UAsAlquiladas;
+		return uAsAlquiladas;
 	}
 
 	@Override
@@ -7051,9 +7025,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 			}else {
 				AdjuntoPlusvalias adjuntoPlusvalias = activoPlusvalia.getAdjunto(dtoAdjunto.getId());
-				if (adjuntoPlusvalias == null) {
-					borrado = false;
-				}
 				activoPlusvalia.getAdjuntos().remove(adjuntoPlusvalias);
 				genericDao.save(ActivoPlusvalia.class, activoPlusvalia);
 			}
@@ -7264,12 +7235,11 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 
 	@Override
 	@Transactional(readOnly = false)
-	public boolean createHistoricoTramtitacionTitulo(DtoHistoricoTramitacionTitulo tramitacionDto,Long idActivo) throws Exception {
+	public boolean createHistoricoTramtitacionTitulo(DtoHistoricoTramitacionTitulo tramitacionDto,Long idActivo) throws HistoricoTramitacionException {
 		
 		HistoricoTramitacionTitulo htt = new HistoricoTramitacionTitulo();
 		ActivoTitulo titulo = activoAdapter.getActivoById(idActivo).getTitulo();
 		String estadoTitulo = null;
-		
 			try {
 				beanUtilNotNull.copyProperty(htt, "titulo", titulo);
 				if(!Checks.esNulo(tramitacionDto.getFechaPresentacionRegistro())) {
@@ -7278,16 +7248,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				if(!Checks.esNulo(tramitacionDto.getEstadoPresentacion())) {
 					DDEstadoPresentacion estadoPresentacion = (DDEstadoPresentacion) utilDiccionarioApi
 							.dameValorDiccionarioByCod(DDEstadoPresentacion.class, tramitacionDto.getEstadoPresentacion());
+					this.doCheckEstadoTramitacionTitulo(titulo, estadoPresentacion);
 					beanUtilNotNull.copyProperty(htt, "estadoPresentacion", estadoPresentacion);
 					if (DDEstadoPresentacion.PRESENTACION_EN_REGISTRO.equals(estadoPresentacion.getCodigo())) {
-						List<DtoHistoricoTramitacionTitulo> listaTramitacionTitulo = getHistoricoTramitacionTitulo(idActivo);
-						
-						for(DtoHistoricoTramitacionTitulo dtoHistoricoTramTitulo : listaTramitacionTitulo) {
-							if(DDEstadoPresentacion.PRESENTACION_EN_REGISTRO.equals(dtoHistoricoTramTitulo.getCodigoEstadoPresentacion()) &&
-									DDEstadoTitulo.ESTADO_EN_TRAMITACION.equals(titulo.getEstado().getCodigo()))
-								throw new Exception(ERROR_ANYADIR_PRESTACIONES_EN_REGISTRO);
-						}
-						
 						estadoTitulo = DDEstadoTitulo.ESTADO_EN_TRAMITACION;
 					}
 					
@@ -7327,15 +7290,15 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		genericDao.save(HistoricoTramitacionTitulo.class, htt);
 		return true;
 	}
-	
+
+
 	@Override
 	@Transactional(readOnly = false)
-	public boolean updateHistoricoTramtitacionTitulo(DtoHistoricoTramitacionTitulo tramitacionDto) {
+	public boolean updateHistoricoTramtitacionTitulo(DtoHistoricoTramitacionTitulo tramitacionDto) throws Exception {
 		
 		HistoricoTramitacionTitulo htt = genericDao.get(HistoricoTramitacionTitulo.class,genericDao.createFilter(FilterType.EQUALS, "id", tramitacionDto.getIdHistorico()));
 		String estadoTitulo = null;
-		ActivoTitulo activoTitulo = null;
-		
+		ActivoTitulo activoTitulo = htt.getTitulo();
 		try {
 				if(!Checks.esNulo(tramitacionDto.getFechaPresentacionRegistro())) {
 					beanUtilNotNull.copyProperty(htt, "fechaPresentacionRegistro", tramitacionDto.getFechaPresentacionRegistro());
@@ -7348,18 +7311,17 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 						estadoTitulo = DDEstadoTitulo.ESTADO_EN_TRAMITACION;
 						htt.setFechaInscripcion(null);
 						htt.setFechaCalificacion(null);
+						activoTitulo.setFechaInscripcionReg(tramitacionDto.getFechaInscripcion());
 					}
-					
 					if (DDEstadoPresentacion.INSCRITO.equals(estadoPresentacion.getCodigo()) && !Checks.esNulo(tramitacionDto.getFechaInscripcion())) {
-						htt.getTitulo().setFechaInscripcionReg(tramitacionDto.getFechaInscripcion());
+						activoTitulo.setFechaInscripcionReg(tramitacionDto.getFechaInscripcion());
 						estadoTitulo = DDEstadoTitulo.ESTADO_INSCRITO;
 						htt.setFechaCalificacion(null);
 					}
-					
 					if (DDEstadoPresentacion.CALIFICADO_NEGATIVAMENTE.equals(estadoPresentacion.getCodigo())) {
 						estadoTitulo = DDEstadoTitulo.ESTADO_SUBSANAR;
 						htt.setFechaInscripcion(null);
-						htt.getTitulo().setFechaInscripcionReg(null);
+						activoTitulo.setFechaInscripcionReg(tramitacionDto.getFechaInscripcion());
 					}
 				}
 				if(!Checks.esNulo(tramitacionDto.getFechaCalificacion())) {
@@ -7367,9 +7329,6 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 				}
 				if(!Checks.esNulo(tramitacionDto.getFechaInscripcion())) {
 					beanUtilNotNull.copyProperty(htt, "fechaInscripcion", tramitacionDto.getFechaInscripcion());
-					Long idTitulo = htt.getTitulo().getId();
-					Filter idTituloFiltro = genericDao.createFilter(FilterType.EQUALS, "id", idTitulo);
-					activoTitulo = genericDao.get(ActivoTitulo.class, idTituloFiltro);
 					activoTitulo.setFechaInscripcionReg(tramitacionDto.getFechaInscripcion());
 				}
 				if(!Checks.esNulo(tramitacionDto.getObservaciones())) {
@@ -7387,7 +7346,7 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		if (!Checks.esNulo(estadoTitulo)) {
 			DDEstadoTitulo ddEstadoTitulo = genericDao.get(DDEstadoTitulo.class, genericDao.createFilter(FilterType.EQUALS, "codigo", estadoTitulo));
 			if (!Checks.esNulo(ddEstadoTitulo)) {
-				htt.getTitulo().setEstado(ddEstadoTitulo);
+				activoTitulo.setEstado(ddEstadoTitulo);
 			}
 		}
 		
@@ -7401,10 +7360,25 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 	@Override
 	@Transactional(readOnly = false)
 	public Boolean destroyHistoricoTramtitacionTitulo(DtoHistoricoTramitacionTitulo tramitacionDto) {
-		if(!Checks.esNulo(tramitacionDto.getIdHistorico())) {
-			genericDao.deleteById(HistoricoTramitacionTitulo.class, tramitacionDto.getIdHistorico());
+		HistoricoTramitacionTitulo htt = genericDao.get(HistoricoTramitacionTitulo.class,
+				genericDao.createFilter(FilterType.EQUALS, "id", tramitacionDto.getIdHistorico()));
+		if (htt != null) {
+			if (htt.getTitulo() != null) {
+				ActivoTitulo titulo = htt.getTitulo();
+				if (titulo != null) {
+					boolean gridConDatos = getHistoricoTramitacionTitulo(titulo.getActivo().getId()).isEmpty();
+					String nuevoEstado = gridConDatos ? DDEstadoTitulo.ESTADO_SUBSANAR : DDEstadoTitulo.ESTADO_EN_TRAMITACION;
+					
+					DDEstadoTitulo estadoTitulo = (DDEstadoTitulo) utilDiccionarioApi
+							.dameValorDiccionarioByCod(DDEstadoTitulo.class, nuevoEstado);
+					titulo.setEstado(estadoTitulo);
+					genericDao.save(ActivoTitulo.class, titulo);
+				}
+			}
+			genericDao.deleteById(HistoricoTramitacionTitulo.class, htt.getId());
+			return true;
 		}
-		return true;
+		return false;
 	}
 	
 	public void existeCalificacionNegativa(List<DtoHistoricoTramitacionTitulo> listaDto, DtoActivoDatosRegistrales dto) {
@@ -7490,11 +7464,9 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 			
 			
 		} catch (IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			logger.error(e.getMessage(),e);
 		} catch (InvocationTargetException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			logger.error(e.getMessage(),e);
 		}
 		
 		
@@ -7512,5 +7484,19 @@ public class ActivoManager extends BusinessOperationOverrider<ActivoApi> impleme
 		List lista = genericDao.getListOrdered(DDFasePublicacion.class, order, filtro);
 		
 		return lista;
+	}
+	
+	
+	private void doCheckEstadoTramitacionTitulo(ActivoTitulo titulo, DDEstadoPresentacion estado) throws HistoricoTramitacionException {
+		List<DtoHistoricoTramitacionTitulo> listaTramitacionTitulo = getHistoricoTramitacionTitulo(
+				titulo.getActivo().getId());
+		if (!listaTramitacionTitulo.isEmpty()) {
+			String estadoPresentacion = listaTramitacionTitulo.get(0) != null ? listaTramitacionTitulo.get(0).getCodigoEstadoPresentacion() : "";
+			if (!DDEstadoPresentacion.CALIFICADO_NEGATIVAMENTE.equals(estadoPresentacion)) {
+				throw new HistoricoTramitacionException(HistoricoTramitacionException.getErrorAlAnyadirRegistroAlTitulo(estado.getDescripcion()));
+				
+			}
+				
+		}
 	}
 }
